--- a/pages/customInfoAdd/customInfoAdd.wxml
+++ b/pages/customInfoAdd/customInfoAdd.wxml
@@ -50,7 +50,12 @@
   </view>
   <view class="item">
     <text class="name">用途：</text>
-    <input class="inp" value="{{yongtu}}" name="yongtu" placeholder="请选择用途"></input>
+    <!-- <input class="inp" value="{{yongtu}}" name="yongtu" placeholder="请选择用途"></input> -->
+    <picker class="inp" name="yongtu" mode="selector" value="{{indexYT}}" bindchange="bindYT" range="{{typeListYT}}">
+      <view class="picker">
+        {{typeListYT[indexYT]}}
+      </view>
+    </picker>
   </view>
   <view class="item">
     <text class="name">镜框：</text>
