--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="title">数据统计</view>
-<view class="date">2018年11月23日 星期五</view>
+<view class="date">{{date}} 星期{{week}}</view>
 <view class="census">
   <view class="item">
   <navigator url="/pages/income/income">
@@ -47,11 +47,11 @@
     <image src="../../images/nav7.png"></image>
     <view>客户列表</view>
   </navigator>
-  <navigator class="item">
+  <navigator class="item" url="/pages/myShop/myShop?title=我的商城">
     <image src="../../images/nav8.png"></image>
     <view>我的商城</view>
   </navigator>
-  <navigator class="item">
+  <navigator class="item" url="/pages/myShop/myShop?title=帮助">
     <image src="../../images/nav9.png"></image>
     <view>帮助</view>
   </navigator>
