--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -4,14 +4,14 @@
   <view class="card">
     <image src="../../images/card.png" class="bg"></image>
     <view class="top">
-      <image src="../../images/avatar.png" class="avatar"></image>
+      <image src="{{userInfo.avatarUrl}}" class="avatar"></image>
       <view class="right">
-        <view class="name">邯郸市和平眼镜店</view>
-        <view class="date">2019-10-07到期</view>
+        <view class="name">{{userInfo.shopName}}</view>
+        <view class="date">{{userInfo.effectiveTime}}</view>
       </view>
     </view>
-    <view class="number">NO. 0014 5320 2329 0417</view>
-    <view class="recharge">立即充值</view>
+    <!-- <view class="number">NO. 0014 5320 2329 0417</view> -->
+    <view class="recharge" bindtap="recharge">立即充值</view>
   </view>
 </view>
 <navigator url='/pages/myStore/myStore'>
