--- a/pages/purchaseAdd/purchaseAdd.wxml
+++ b/pages/purchaseAdd/purchaseAdd.wxml
@@ -13,11 +13,11 @@
   </view>
   
   <view class="item">
-    <text class="name">老花镜：</text>
+    <text class="name">太阳镜：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexlhj" mode="selector" value="{{indexlhj}}" data-num="2" data-name="lhj" data-list="listlhj" bindchange="bindData" range="{{listlhj}}" range-key="peripheryName">
+    <picker class="inp" name="indextyj" mode="selector" value="{{indextyj}}" data-num="2" data-name="tyj" data-list="listtyj" bindchange="bindData" range="{{listtyj}}" range-key="peripheryName">
       <view class="picker">
-        {{listlhj[indexlhj].peripheryName}}
+        {{listtyj[indextyj].peripheryName}}
       </view>
     </picker>
   </view>
@@ -123,6 +123,10 @@
   </view>
 
   <view class="line"></view>
+  <view class="item" style="margin-top:30rpx;">
+    <text class="name">姓名：</text>
+    <input class="inp" value="{{purchaseName}}" name="purchaseName"></input>
+  </view>
   <view class="item" style="margin-top:30rpx;">
     <text class="name">消费金额：</text>
     <input class="inp" value="{{saleMoney}}" name="saleMoney"></input>
