--- a/pages/myStore/myStore.wxml
+++ b/pages/myStore/myStore.wxml
@@ -1,32 +1,32 @@
 <!--pages/myStore/myStore.wxml-->
 <form bindsubmit="formSubmit">
-  <view class="section avatar">
+  <!-- <view class="section avatar">
     <view class="title">头像</view>
     <image class="right" src="../../images/avatar.png"></image>
-  </view>
+  </view> -->
   <view class="section">
     <view class="title">登录名</view>
-    <input class="right" name="input" placeholder="请输入登录名" />
+    <input class="right" name="loginName" value="{{loginName}}" placeholder="请输入登录名" />
   </view>
-  <view class="section">
+  <!-- <view class="section">
     <view class="title">类型选择</view>
     <picker class="right" bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
       <view class="picker">
         {{array[index]}}
       </view>
     </picker>
-  </view>
+  </view> -->
   <view class="section">
     <view class="title">真实姓名</view>
-    <input class="right" name="input" placeholder="请输入真实姓名" />
+    <input class="right" name="name" value="{{name}}" placeholder="请输入真实姓名" />
   </view>
   <view class="section">
     <view class="title">店铺名称</view>
-    <input class="right" name="input" placeholder="请店铺名称" />
+    <input class="right" name="shopName" value="{{shopName}}" placeholder="请店铺名称" />
   </view>
   <view class="section">
     <view class="title">电话号码</view>
-    <input class="right" name="input" placeholder="请电话号码" />
+    <input class="right" name="phone" value="{{phone}}" placeholder="请电话号码" />
   </view>
   <view class="btn-area">
     <button formType="submit">确认修改</button>
