--- a/pages/customInfo/customInfo.wxss
+++ b/pages/customInfo/customInfo.wxss
@@ -67,11 +67,13 @@ page{
   margin-left: -196rpx;
   padding: 20rpx 30rpx 26rpx;
   background: #fff;
-  margin-bottom: 10rpx;
   line-height: 60rpx;
   font-size: 28rpx;
   font-weight: 600;
   color: #000;
+  margin-bottom: 20rpx;
+  box-shadow: 0 0 20rpx #d2d0fa;
+  padding-bottom: 20rpx;
 }
 .content1 .new{
   position: absolute;
@@ -109,10 +111,45 @@ page{
   -webkit-transform: translateX(0);
   transform: translateX(0);
 }
+.btn-group {
+  display: flex;
+  justify-content: space-around;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 24rpx;
+  color: #fff;
+  /* color: #4944fe; */
+  font-weight: 600;
+  margin: 0 auto;
+  width: 690rpx;
+  text-align: center;
+}
+
+.btn-group .edit {
+  display: inline-block;
+  width: 50%;
+  background-color: #4944fe;
+  color: #fff;
+}
+
+.btn-group .del {
+  display: inline-block;
+  width: 50%;
+  background-color: #e4373b;
+  color: #fff;
+}
  
 .row1 {
   display: flex;
   flex-direction: row;
+}
+.row .name{
+  color: #000;
+  margin-right: 20rpx;
+}
+.row .detail{
+  width: 157rpx;
+  display: inline-block;
 }
  
 .column1 {
