--- a/pages/customList/customList.wxml
+++ b/pages/customList/customList.wxml
@@ -6,26 +6,35 @@
     <button bindtap="toHighSearch">高级搜索</button>
   </view>
 </view>
-<view class="touch-item1 {{item.isTouchMove ? 'touch-move-active1' : ''}}" data-index="{{index}}" bindtouchstart="touchstart" bindtouchmove="touchmove" wx:for="{{customList}}" wx:key="id">
+<view style="padding-bottom: 90rpx;">
+  <view class="touch-item1 {{item.isTouchMove ? 'touch-move-active1' : ''}}" data-index="{{index}}" wx:for="{{customList}}" wx:key="id">
 
-  <view class='content1' bindtap='showDetail' data-id="{{item.id}}">
-    <view class="item">
-      <view class="top">
-        <text class="name">{{item.fullname}}</text>
-        <text class="sex">（{{item.sex==1?'男':'女'}}）</text>
-        <text class="age">{{item.age}}岁</text>
-        <text class="word">简拼：{{item.jianpin}}</text>
-        <view class="date">创建时间：{{item.peijingdate}}</view>
+    <view class='content1' bindtap='showDetail' data-id="{{item.id}}">
+      <view class="item">
+        <view class="top">
+          <text class="name">{{item.fullname}}</text>
+          <text class="sex">（{{item.sex==1?'男':'女'}}）</text>
+          <text class="age">{{item.age}}岁</text>
+          <text class="word">简拼：{{item.jianpin}}</text>
+          <view class="date">创建时间：{{item.peijingdate}}</view>
+        </view>
+        <view class="detail">联系电话：{{item.phone}}</view>
+        <view class="detail">属地：{{item.address}}</view>
       </view>
-      <view class="detail">联系电话：{{item.phone}}</view>
-      <view class="detail">属地：{{item.address}}</view>
+      <view class="btn-group">
+        <text class="edit" catchtap="edit" data-id="{{item.id}}">编辑</text>
+        <text class="del" catchtap="del" data-id="{{item.id}}">删除</text>
+      </view>
     </view>
+
+    <view class="del1" catchtap="edit" data-id="{{item.id}}">编辑</view>
+    <view class="del1 del2" catchtap="del" data-id="{{item.id}}">删除</view>
+
   </view>
-
-  <view class="del1" catchtap="edit"  data-id="{{item.id}}">编辑</view>
-  <view class="del1 del2" catchtap="del" data-id="{{item.id}}">删除</view>
-
 </view>
+
+<navigator url="/pages/customAdd/customAdd" class="add">添加客户</navigator>
+
 <view class="search-mask" wx:if="{{isSearch}}" bindtap="closeMask">
   <view class="content" catchtap='(function(){})()'>
     <view class="top">
