--- a/pages/customList/customList.wxss
+++ b/pages/customList/customList.wxss
@@ -168,6 +168,36 @@ page{
   -webkit-transform: translateX(196rpx);
   transform: translateX(196rpx);
   margin-left: -196rpx;
+  margin-bottom: 20rpx;
+  box-shadow: 0 0 20rpx #d2d0fa;
+  padding-bottom: 20rpx;
+  background: #fff;
+
+}
+.btn-group {
+  display: flex;
+  justify-content: space-around;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 24rpx;
+  color: #fff;
+  /* color: #4944fe; */
+  font-weight: 600;
+  margin: 0 auto;
+  width: 690rpx;
+  text-align: center;
+}
+
+.btn-group .edit {
+  display: inline-block;
+  width: 50%;
+  background-color: #4944fe;
+}
+
+.btn-group .del {
+  display: inline-block;
+  width: 50%;
+  background-color: #e4373b;
 }
  
 .del1 {
@@ -208,4 +238,17 @@ page{
  
 .full_width1 {
   width: 100%;
+}
+.add{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 86rpx;
+  line-height: 86rpx;
+  font-size: 28rpx;
+  font-weight: bold;
+  text-align: center;
+  background: #fff;
+  color: #fff;
+  background: #4944fe;
 }
