--- a/pages/goodsInfo/goodsInfo.wxss
+++ b/pages/goodsInfo/goodsInfo.wxss
@@ -55,17 +55,44 @@
   width: 300rpx;
 }
 
-.fix {
-  position: fixed;
-  right: 80rpx;
-  bottom: 250rpx;
-  width: 80rpx;
-  height: 80rpx;
+.btn-group {
+  display: flex;
+  justify-content: space-around;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 24rpx;
+  color: #fff;
+  /* color: #4944fe; */
+  font-weight: 600;
+  margin: 0 auto;
+  width: 690rpx;
+  text-align: center;
 }
 
-.fix image {
-  width: 80rpx;
+.btn-group .edit {
+  display: inline-block;
+  width: 50%;
+  background-color: #4944fe;
+}
+
+.btn-group .del {
+  display: inline-block;
+  width: 50%;
+  background-color: #e4373b;
+}
+
+.fix {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   height: 80rpx;
+  line-height: 80rpx;
+  background: #4944fe;
+  text-align: center;
+  font-size: 28rpx;
+  font-weight: bold;
+  color: #fff;
+  border-radius: 0;
 }
 
 .touch-item1 {
@@ -75,7 +102,7 @@
   overflow: hidden;
   font-size: 0;
 }
- 
+
 .content1 {
   width: 100%;
   /* line-height: 50rpx; */
@@ -85,8 +112,11 @@
   -webkit-transform: translateX(196rpx);
   transform: translateX(196rpx);
   margin-left: -196rpx;
+  margin-bottom: 20rpx;
+  box-shadow: 0 0 20rpx #d2d0fa;
+  padding-bottom: 20rpx;
 }
- 
+
 .del1 {
   background-color: #4944fe;
   width: 98rpx;
@@ -106,22 +136,22 @@
   background-color: #e4373b;
   margin-left: -1rpx;
 }
- 
+
 .touch-move-active1 .content1, .touch-move-active1 .del1 {
   -webkit-transform: translateX(0);
   transform: translateX(0);
 }
- 
+
 .row1 {
   display: flex;
   flex-direction: row;
 }
- 
+
 .column1 {
   display: flex;
   flex-direction: column;
 }
- 
+
 .full_width1 {
   width: 100%;
 }
