--- a/pages/nearGoods/nearGoods.wxml
+++ b/pages/nearGoods/nearGoods.wxml
@@ -24,8 +24,8 @@
     </picker>
   </view>
 </view>
-
-<view class="touch-item1 {{item.isTouchMove ? 'touch-move-active1' : ''}}" data-index="{{index}}" bindtouchstart="touchstart" bindtouchmove="touchmove" wx:for="{{goodsList}}" wx:key="id">
+<view style="padding-bottom:90rpx;">
+  <view class="touch-item1 {{item.isTouchMove ? 'touch-move-active1' : ''}}" data-index="{{index}}" wx:for="{{goodsList}}" wx:key="id">
 
   <view class='content1' data-id="{{item.id}}">
     <view class="item">
@@ -35,12 +35,17 @@
       </view>
       <view class="date">创建时间：{{item.createTime}}</view>
     </view>
+    <view class="btn-group">
+        <text class="edit" catchtap="edit" data-id="{{item.id}}" data-dictName="{{item.peripheryName}}" data-dictInfo="{{item.peripheryInfo}}">编辑</text>
+        <text class="del" catchtap="del" data-id="{{item.id}}">删除</text>
+      </view>
   </view>
 
   <view class="del1" catchtap="edit" data-id="{{item.id}}" data-dictName="{{item.peripheryName}}" data-dictInfo="{{item.peripheryInfo}}">编辑</view>
   <view class="del1 del2" catchtap="del" data-id="{{item.id}}">删除</view>
 </view>
+</view>
 
-<navigator class="fix" url="/pages/goodsAdd/goodsAdd?title=周边产品">
-  <image src="../../images/add.png"></image>
-</navigator>
+
+
+<navigator class="fix" url="/pages/goodsAdd/goodsAdd?title=周边产品">添加周边产品</navigator>
