--- a/pages/nearGoods/nearGoods.wxss
+++ b/pages/nearGoods/nearGoods.wxss
@@ -55,17 +55,18 @@
   width: 300rpx;
 }
 
-.fix {
+.fix{
   position: fixed;
-  right: 80rpx;
-  bottom: 250rpx;
-  width: 80rpx;
+  bottom: 0;
+  width: 100%;
   height: 80rpx;
-}
-
-.fix image {
-  width: 80rpx;
-  height: 80rpx;
+  line-height: 80rpx;
+  background: #4944fe;
+  text-align: center;
+  font-size: 28rpx;
+  font-weight: bold;
+  color: #fff;
+  border-radius: 0;
 }
 
 .touch-item1 {
@@ -85,6 +86,34 @@
   -webkit-transform: translateX(196rpx);
   transform: translateX(196rpx);
   margin-left: -196rpx;
+margin-bottom: 20rpx;
+box-shadow: 0 0 20rpx #d2d0fa;
+  padding-bottom: 20rpx;
+}
+.btn-group {
+  display: flex;
+  justify-content: space-around;
+  height: 50rpx;
+  line-height: 50rpx;
+  font-size: 24rpx;
+  color: #fff;
+  /* color: #4944fe; */
+  font-weight: 600;
+  margin: 0 auto;
+  width: 690rpx;
+  text-align: center;
+}
+
+.btn-group .edit {
+  display: inline-block;
+  width: 50%;
+  background-color: #4944fe;
+}
+
+.btn-group .del {
+  display: inline-block;
+  width: 50%;
+  background-color: #e4373b;
 }
  
 .del1 {
