--- a/pages/purchaseAdd/purchaseAdd.wxml
+++ b/pages/purchaseAdd/purchaseAdd.wxml
@@ -113,6 +113,15 @@
     </picker>
   </view>
   <view class="item">
+    <text class="name">眼药：</text>
+    <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
+    <picker class="inp" name="indexyy" mode="selector" value="{{indexyy}}" data-num="14" data-name="yy" data-list="listyy" bindchange="bindData" range="{{listyy}}" range-key="peripheryName">
+      <view class="picker">
+        {{listyy[indexyy].peripheryName}}
+      </view>
+    </picker>
+  </view>
+  <view class="item">
     <text class="name">其他：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
     <picker class="inp" name="indexqt" mode="selector" value="{{indexqt}}" data-num="13" data-name="qt" data-list="listqt" bindchange="bindData" range="{{listqt}}" range-key="peripheryName">
