--- a/pages/nearGoods/nearGoods.wxml
+++ b/pages/nearGoods/nearGoods.wxml
@@ -36,6 +36,7 @@
       <view class="date">创建时间：{{item.createTime}}</view>
     </view>
     <view class="btn-group">
+        <text class="edit" style="background:green" catchtap="detail" data-id="{{item.id}}" data-dictName="{{item.peripheryName}}" data-dictInfo="{{item.peripheryInfo}}">查看</text>
         <text class="edit" catchtap="edit" data-id="{{item.id}}" data-dictName="{{item.peripheryName}}" data-dictInfo="{{item.peripheryInfo}}">编辑</text>
         <text class="del" catchtap="del" data-id="{{item.id}}">删除</text>
       </view>
