--- a/pages/purchaseDet/purchaseDet.wxml
+++ b/pages/purchaseDet/purchaseDet.wxml
@@ -3,16 +3,16 @@
   <view class="line"></view>
   <view class="item" style="margin-top:30rpx;">
     <text class="name">姓名：</text>
-    <input class="inp" value="{{purchaseName}}" name="purchaseName"></input>
+    <input class="inp" value="{{purchaseName}}" name="purchaseName" disabled></input>
   </view>
   <view class="item" style="margin-top:30rpx;">
     <text class="name">消费金额：</text>
-    <input class="inp" value="{{saleMoney}}" name="saleMoney"></input>
+    <input class="inp" value="{{saleMoney}}" name="saleMoney" disabled></input>
   </view>
   <view class="item">
     <text class="name">配镜日期：</text>
     <!-- <input class="inp" value="createDate" name="createDate"></input> -->
-    <picker class="inp" value="{{createTime}}" name="createTime" mode="date" bindchange="bindTime">
+    <picker class="inp" value="{{createTime}}" name="createTime" mode="date" bindchange="bindTime" disabled>
       <view class="picker">
         {{createTime}}
       </view>
@@ -23,7 +23,7 @@
   <view class="item">
     <text class="name">老花镜：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexlhj" mode="selector" value="{{indexlhj}}" data-num="1" data-name="lhj" data-list="listlhj" bindchange="bindData" range="{{listlhj}}" range-key="peripheryName">
+    <picker class="inp" name="indexlhj" mode="selector" value="{{indexlhj}}" data-num="1" data-name="lhj" data-list="listlhj" bindchange="bindData" range="{{listlhj}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listlhj[indexlhj].peripheryName}}
       </view>
@@ -33,7 +33,7 @@
   <view class="item">
     <text class="name">太阳镜：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indextyj" mode="selector" value="{{indextyj}}" data-num="2" data-name="tyj" data-list="listtyj" bindchange="bindData" range="{{listtyj}}" range-key="peripheryName">
+    <picker class="inp" name="indextyj" mode="selector" value="{{indextyj}}" data-num="2" data-name="tyj" data-list="listtyj" bindchange="bindData" range="{{listtyj}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listtyj[indextyj].peripheryName}}
       </view>
@@ -43,7 +43,7 @@
   <view class="item">
     <text class="name">镜框类型：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexjk" mode="selector" value="{{indexjk}}" data-num="3" data-name="jk" data-list="listjk" bindchange="bindData" range="{{listjk}}" range-key="peripheryName">
+    <picker class="inp" name="indexjk" mode="selector" value="{{indexjk}}" data-num="3" data-name="jk" data-list="listjk" bindchange="bindData" range="{{listjk}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listjk[indexjk].peripheryName}}
       </view>
@@ -52,7 +52,7 @@
   <view class="item">
     <text class="name">镜片类型：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexjp" mode="selector" value="{{indexjp}}" data-num="4" data-name="jp" data-list="listjp" bindchange="bindData" range="{{listjp}}" range-key="peripheryName">
+    <picker class="inp" name="indexjp" mode="selector" value="{{indexjp}}" data-num="4" data-name="jp" data-list="listjp" bindchange="bindData" range="{{listjp}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listjp[indexjp].peripheryName}}
       </view>
@@ -61,7 +61,7 @@
   <view class="item">
     <text class="name">防蓝光镜：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexflg" mode="selector" value="{{indexflg}}" data-num="5" data-name="flg" data-list="listflg" bindchange="bindData" range="{{listflg}}" range-key="peripheryName">
+    <picker class="inp" name="indexflg" mode="selector" value="{{indexflg}}" data-num="5" data-name="flg" data-list="listflg" bindchange="bindData" range="{{listflg}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listflg[indexflg].peripheryName}}
       </view>
@@ -70,7 +70,7 @@
   <view class="item">
     <text class="name">负离子镜：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexflz" mode="selector" value="{{indexflz}}" data-num="6" data-name="flz" data-list="listflz" bindchange="bindData" range="{{listflz}}" range-key="peripheryName">
+    <picker class="inp" name="indexflz" mode="selector" value="{{indexflz}}" data-num="6" data-name="flz" data-list="listflz" bindchange="bindData" range="{{listflz}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listflz[indexflz].peripheryName}}
       </view>
@@ -79,7 +79,7 @@
   <view class="item">
     <text class="name">眼疲劳品：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexypl" mode="selector" value="{{indexypl}}" data-num="7" data-name="ypl" data-list="listypl" bindchange="bindData" range="{{listypl}}" range-key="peripheryName">
+    <picker class="inp" name="indexypl" mode="selector" value="{{indexypl}}" data-num="7" data-name="ypl" data-list="listypl" bindchange="bindData" range="{{listypl}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listypl[indexypl].peripheryName}}
       </view>
@@ -88,7 +88,7 @@
   <view class="item">
     <text class="name">护理液：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexhly" mode="selector" value="{{indexhly}}" data-num="8" data-name="hly" data-list="listhly" bindchange="bindData" range="{{listhly}}" range-key="peripheryName">
+    <picker class="inp" name="indexhly" mode="selector" value="{{indexhly}}" data-num="8" data-name="hly" data-list="listhly" bindchange="bindData" range="{{listhly}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listhly[indexhly].peripheryName}}
       </view>
@@ -97,7 +97,7 @@
   <view class="item">
     <text class="name">眼镜盒布：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexyjh" mode="selector" value="{{indexyjh}}" data-num="9" data-name="yjh" data-list="listyjh" bindchange="bindData" range="{{listyjh}}" range-key="peripheryName">
+    <picker class="inp" name="indexyjh" mode="selector" value="{{indexyjh}}" data-num="9" data-name="yjh" data-list="listyjh" bindchange="bindData" range="{{listyjh}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listyjh[indexyjh].peripheryName}}
       </view>
@@ -106,7 +106,7 @@
   <view class="item">
     <text class="name">按摩仪：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexamy" mode="selector" value="{{indexamy}}" data-num="10" data-name="amy" data-list="listamy" bindchange="bindData" range="{{listamy}}" range-key="peripheryName">
+    <picker class="inp" name="indexamy" mode="selector" value="{{indexamy}}" data-num="10" data-name="amy" data-list="listamy" bindchange="bindData" range="{{listamy}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listamy[indexamy].peripheryName}}
       </view>
@@ -115,7 +115,7 @@
   <view class="item">
     <text class="name">弱视用品：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexrs" mode="selector" value="{{indexrs}}" data-num="11" data-name="rs" data-list="listrs" bindchange="bindData" range="{{listrs}}" range-key="peripheryName">
+    <picker class="inp" name="indexrs" mode="selector" value="{{indexrs}}" data-num="11" data-name="rs" data-list="listrs" bindchange="bindData" range="{{listrs}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listrs[indexrs].peripheryName}}
       </view>
@@ -124,7 +124,7 @@
   <view class="item">
     <text class="name">矫正姿势：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexjz" mode="selector" value="{{indexjz}}" data-num="12" data-name="jz" data-list="listjz" bindchange="bindData" range="{{listjz}}" range-key="peripheryName">
+    <picker class="inp" name="indexjz" mode="selector" value="{{indexjz}}" data-num="12" data-name="jz" data-list="listjz" bindchange="bindData" range="{{listjz}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listjz[indexjz].peripheryName}}
       </view>
@@ -133,20 +133,19 @@
   <view class="item">
     <text class="name">眼药：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexyy" mode="selector" value="{{indexyy}}" data-num="14" data-name="yy" data-list="listyy" bindchange="bindData" range="{{listyy}}" range-key="peripheryName">
+    <picker class="inp" name="indexyy" mode="selector" value="{{indexyy}}" data-num="14" data-name="yy" data-list="listyy" bindchange="bindData" range="{{listyy}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listyy[indexyy].peripheryName}}
       </view>
     </picker>
   </view>
-  <view class="item" style="padding-bottom:90rpx;">
+  <view class="item">
     <text class="name">其他：</text>
     <!-- <input class="inp" value="jiangkuang" name="jiangkuang" placeholder="请选择镜框"></input> -->
-    <picker class="inp" name="indexqt" mode="selector" value="{{indexqt}}" data-num="13" data-name="qt" data-list="listqt" bindchange="bindData" range="{{listqt}}" range-key="peripheryName">
+    <picker class="inp" name="indexqt" mode="selector" value="{{indexqt}}" data-num="13" data-name="qt" data-list="listqt" bindchange="bindData" range="{{listqt}}" range-key="peripheryName" disabled>
       <view class="picker">
         {{listqt[indexqt].peripheryName}}
       </view>
     </picker>
   </view>
-  <button formType="submit" class="submit">保存</button>
 </form>
