--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -52,7 +52,7 @@
 .nav .item:nth-child(3n){
   border-right: none;
 }
-.nav .item:nth-last-child(1){
+.nav .item:nth-last-child(1),.nav .item:nth-last-child(2),.nav .item:nth-last-child(4),.nav .item:nth-last-child(3){
   border-bottom: none;
 }
 .nav .item image{
