--- a/pages/customInfoAdd/customInfoAdd.wxss
+++ b/pages/customInfoAdd/customInfoAdd.wxss
@@ -52,7 +52,7 @@
   width: 638rpx;
   font-size: 28rpx;
 }
-.remark textarea{
+.remark textarea,.remark .travel_textarea{
   width: 100%;
   height: 160rpx;
 }
