--- a/pages/lensAdd/lensAdd.wxml
+++ b/pages/lensAdd/lensAdd.wxml
@@ -40,8 +40,8 @@
   <view class="rows" wx:for="{{lensData}}" wx:key="index">
     <text class="item1">{{item.desc}}</text>
     <text class="item2">{{item.jiangpian}}</text>
-    <text class="item3">{{item.rQiujing||0}}</text>
-    <text class="item4">{{item.rZhujing||0}}</text>
+    <text class="item3">{{item.lQiujing||0}}</text>
+    <text class="item4">{{item.lZhujing||0}}</text>
     <text class="item5">{{item.createDate}}</text>
     <text class="item6">{{item.buytime}}</text>
   </view>
